[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/more_controls/nodes/containers/circle_container.gd" type="Script" id=1]
[ext_resource path="res://Assets/Interface/Buttons/grey_button.tres" type="StyleBox" id=2]
[ext_resource path="res://Scenes/Objects/Pet/Components/Actions/action_group_renderer.gd" type="Script" id=3]
[ext_resource path="res://Assets/Interface/Icons/png/x_icon.png" type="Texture" id=4]
[ext_resource path="res://Nodes/Control/PopButton/pop_button.gd" type="Script" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/ttf/Nunito/Nunito-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.50224, 0.562428, 0.607569, 0.588235 )
border_color = Color( 1, 1, 1, 0.294118 )
corner_radius_top_left = 43
corner_radius_top_right = 43
corner_radius_bottom_right = 43
corner_radius_bottom_left = 43
corner_detail = 20
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[node name="ActionGroupRenderer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
button_font = SubResource( 2 )
button_color = Color( 1, 1, 1, 0.784314 )
button_disabled_color = Color( 1, 1, 1, 0.784314 )
button_normal = ExtResource( 2 )
button_pressed = ExtResource( 2 )
button_disabled = ExtResource( 2 )
button_focus = SubResource( 4 )
cancel_button_normal = SubResource( 3 )
cancel_button_pressed = SubResource( 3 )
cancel_button_disabled = SubResource( 3 )
cancel_button_focus = SubResource( 4 )
cancel_button_color = Color( 1, 1, 1, 0.784314 )
cancel_button_disabled_color = Color( 1, 1, 1, 0.784314 )
include_cancel_button = true

[node name="Tween" type="Tween" parent="."]

[node name="ActionGroupContainer" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
extra_margin = 100.0
fit_children_inside = true
degree_offset = -215

[node name="CancelButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -35.0
margin_right = 40.0
margin_bottom = 35.0
rect_min_size = Vector2( 80, 70 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CancelButton"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
